updated textbox font size and added js pw check

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div id="pw2">
                             <lable for="password2">*Confirm Password</lable>
-                            <input type="password2" id="password2" name="password2"
+                            <input type="password" id="password2" name="password2"
                                 title="Password must be at least five characters long." minlength="5" required>
                         </div>
                     </div>
@@ -73,6 +73,7 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
